--- a/build.gradle
+++ b/build.gradle
@@ -50,18 +50,18 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.hibernate:hibernate-validator:7.0.1.Final'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
-    implementation 'org.flywaydb:flyway-core:7.11.2'
+    implementation 'org.flywaydb:flyway-core:8.0.0'
     implementation 'com.auth0:java-jwt:3.18.2'
     implementation 'org.gitlab4j:gitlab4j-api:4.18.0'
     compileOnly 'org.projectlombok:lombok:1.18.22'
     runtimeOnly 'mysql:mysql-connector-java:8.0.26'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.5.5'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools:2.5.5'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'com.h2database:h2:1.4.200'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test:5.5.1'
+    testImplementation 'org.springframework.security:spring-security-test'
 
 }
 
@@ -109,6 +109,13 @@ jacocoTestReport {
     }
     dependsOn test
 }
+
+configurations.all {
+    resolutionStrategy.dependencySubstitution {
+        substitute module("com.ibm.icu:icu4j") with module("com.ibm.icu:icu4j:69.1")
+    }
+}
+
 
 checkstyleMain.source = 'src/main/java'
 
